# ardupomodoro

./: .gitignore  README.md
scripts/: arduino_mingw_build_mega.bat  arduino_mingw_build_uno.bat  arduino_mingw_upload.bat  msvc_x86.cmd
src/: CMakeLists.txt  iformatedoutput.h  ikeyboard.h  ipomodorologic.h  keys.h  pomodorologic.cpp  portable_app.cpp  portable_app.h
src/arduino/: main_example_lcd.cpp  platform.cpp
src/host/: stdio_platform.cpp
